Updated adaptive desktope
Updated adaptive desktope.
Header at 1320 pixels.

--- a/style.css
+++ b/style.css
@@ -562,6 +562,27 @@ li {
 }
 
 
+
+/* ----------------------------------------------------- */
+/* Дополнительный адаптив */
+/* ----------------------------------------------------- */
+
+/* Home 1320px */
+
+@media screen and (width: 1320px) {
+
+    body,
+    section {
+        max-width: 1320px;
+    }
+
+    .preview-title {
+        font-size: 30px;
+        margin-top: 3.5rem;
+    }
+
+}
+
 /* --------------------------------------------------------------------------------------------------------------------- */
 /* Адаптив для нетбука */
 /* Адаптив для нетбука     СТРАНИЦА HOME */
@@ -601,6 +622,7 @@ li {
 
     .preview-title {
         font-size: 30px;
+        margin-top: 0.5rem;
     }
 
     /* ----------------------------------------- */
@@ -2159,3 +2181,23 @@ li {
     }
 
 }
+
+
+
+/* ----------------------------------------------------- */
+/* Дполнительная потимизация адаптива */
+/* ----------------------------------------------------- */
+
+/* @media screen and (max-width: 1320px) {
+
+    body,
+    section {
+        max-width: 1320px;
+    }
+
+    .preview-title {
+        font-size: 30px;
+        margin-top: 3.5rem;
+    }
+
+} */
